tests/purs/failing/3335-TypeOpAssociativityError.purs
-- @shouldFailWith NonAssociativeError
module Main where

infix 6 type Function as >>

const :: forall a b. a >> b >> a
const a _ = a
